sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort: error: not enough arguments for method insertionSort: (nums: Array[Int], value: Int)Unit.
Unspecified value parameters nums, value.
		insertionSort();
                             ^AlgInsertionSort:13: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var T:Array[Int]
      ^